completed payment button js

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -3,15 +3,17 @@
 
 <head>
   <meta charset="utf-8">
+  
+<meta name="viewport" content="width=device-width">
   <title>Secrets</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="signStyle.css">
+  <!-- <link rel="stylesheet" href="signStyle.css">
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
     var razorPublicKey = '<%= razorPublicKey %>'
 </script>
-<script src="razorPay.js" defer></script>
+<script src="razorPay.js" defer></script> -->
 </head>
 
 <body>
@@ -35,7 +37,7 @@
                             </select>
                           </div>
                           
-                  <button type="button" id="checkGetId">Select OPTION</button>
+                  <button type="button" id="checkGetId1">Select OPTION</button>
                           </div> 
                 </form>
                 <button id="rzp-button1">Pay</button>
