repayment feature added

--- a/views/formdetails/UserMain.ejs
+++ b/views/formdetails/UserMain.ejs
@@ -140,21 +140,21 @@
                     <div class="gap row justify-content-around">
                         <div class="col-md-4">
                             <label  for="category">Upload Aadhar File</label>
-                            <input type="file" name="cover1" class="filepond" id="file1" placeholder="Aadhar card" >
+                            <input type="file" name="cover1" class="filepond" id="file1" placeholder="Aadhar card" required>
                         </div>
                         <div class=" col-md-4">
                             <label  for="category">Upload PAN Card File</label>
-                            <input type="file" name="cover2" class=" filepond" id="file2" placeholder="Aadhar card" >
+                            <input type="file" name="cover2" class=" filepond" id="file2" placeholder="Aadhar card" required>
                         </div>  
                     </div>
                     <div class="gap row justify-content-around">
                         <div class=" col-md-4">
                             <label  for="category">Upload Bank-Account Details</label>
-                            <input type="file" name="cover3" class=" filepond" id="file3" placeholder="Aadhar card" >
+                            <input type="file" name="cover3" class=" filepond" id="file3" placeholder="Aadhar card" required>
                         </div>
                         <div class=" col-md-4">
                             <label  for="category">Upload Form-16</label>
-                            <input type="file" name="cover4" class=" filepond" id="file4" placeholder="Aadhar card" >
+                            <input type="file" name="cover4" class=" filepond" id="file4" placeholder="Aadhar card" required>
                         </div>  
                     </div>
         </div>
