--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,16 +17,12 @@
     <!--====== Line Icons CSS ======-->
     <link rel="stylesheet" href="assets/css/LineIcons.css">
         
-    <!-- FILEPND STYLESHEET -->
-    <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
-    <link href="https://unpkg.com/filepond-plugin-file-poster/dist/filepond-plugin-file-poster.css" rel="stylesheet">
-    <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
-
     
 
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    
     <script src="https://use.fontawesome.com/4301952e86.js"></script>
     
    
@@ -37,8 +33,6 @@
   
     <div class="container">
    
-        <h5><%=data.userPersonalData[0 ].mobileno%></h5>
-        <h5><%=customVID%></h5>
          <div class="row justify-content-center">
                  <div class="col-md-10 position-relative">
                   
@@ -97,7 +91,7 @@
                                       </table>  
                                  <br>
                                  <h6 class="heading-content">Uploaded Documents</h6>
-                                 <div class="gap row justify-content-around" style="width: auto;">
+                                 <div class="gap  row justify-content-around" style="width: auto;">
                                    <div class="col-md-4 " ><img style="width: 200px ;" src="data: <%= data.userPersonalData[0].savefile1[0].file1Type%>;charset=utf-8;base64,<%= arr[0]%>">
                                    </div>
                                    <div class="col-md-4"><img style="width: 200px ;" src="data: <%= data.userPersonalData[0].savefile1[1].file1Type%>;charset=utf-8;base64,<%= arr[1]%>">
@@ -110,8 +104,48 @@
                                   <div class="col-md-4"><img style="width: 200px;" src="data: <%= data.userPersonalData[0].savefile1[3].file1Type%>;charset=utf-8;base64,<%= arr[3]%>">
                                   </div>
                                 </div>
-                                      
-                                    
+                                    <div class="payment_service">
+                                <div class="gap row justify-content-between ">
+                                  <div class="card text-white bg-success mb-3 col-md-6" style="max-width: 20rem;">
+                                      <div class="card-header text-center">ITR</div>
+                                      <div class="card-body">
+                                      <h4 id="priceElement1" class="card-title"><%= items.products[0].price %></h4>
+                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      </div>
+                                  </div>
+                                  <div class="card text-white bg-success mb-3 col-md-6" style="max-width: 20rem;">
+                                      <div class="card-header text-center">GST</div>
+                                      <div class="card-body">
+                                      <h4 id="priceElement2" class="card-title"><%= items.products[1].price %></h4>
+                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  </div>
+                                  </div>
+                           </div>
+                                
+                                
+                    
+
+                                <div class="gap row justify-content-between ">
+                                  <div class="form-group col-md-8">
+                                      <label  for="category">Select Your Service</label>
+                                      <select name="E_category" id="selectedService" class="form-control" >
+                                        
+                                        <option value="ITR">File IT-Return</option>
+                                        <option value="GST">File GST</option>
+                                      </select>
+                                  </div>
+                                  <div class="form-group col-md-3 my-4 ">
+                                      <a id="checkGetId1" role="button" class="btn btn-success ">Select</a>
+                                  </div>
+                                </div>
+                                <div id="paymentButton" class="row justify-content-center hide">
+                                  <div class="col-md-6">
+                                      <button class="btn btn-primary btn-block" id="rzp-button1">Pay Now</button>
+                                  </div>
+                                  
+                              </div>
+              
+                            </div> 
                                 </div>
                         
                              </div> 
@@ -163,18 +197,37 @@
     <script src="assets/js/jquery.easing.min.js"></script>
     <script src="assets/js/scrolling-nav.js"></script>
  
-    <script defer src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
-    <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
-<script defer src="filePond.js"></script>
-
-    <!--====== Main js ======-->
+    <!--====== Payment js ======-->
+    <script>
+      let razorPublicKey = '<%= razorPublicKey %>'
+      let customVID='<%= customVID %>'
+      </script>
+      <script src="https://checkout.razorpay.com/v1/checkout.js"></script> 
+      
+      <script src="razorPay.js" defer></script>
+   
+   
+      // <!--====== Main js ======-->
+  <script>let option_value='<%= option_value %>'</script>
+  <script type="text/javascript">
+  
+    if(option_value == 1){
+      document.querySelector(".payment_service").classList.add("hide");
+    }
+    else if(option_value == 2){
+      document.getElementById("selectedService").remove(0);
+    }
+    else if(option_value == 3){
+      document.getElementById("selectedService").remove(1);
+    }
+    </script>
     
 
     
-    <!-- <script src="script1.js"></script> -->
+    // <!-- <script src="script1.js"></script> -->
     <script src="assets/js/main.js"></script>
     
-    <script src="addContentScript.js"></script>
+    // <script src="addContentScript.js"></script>
  
 </body>
 </html>
